overflow fix

--- a/public/less/glob.less
+++ b/public/less/glob.less
@@ -86,7 +86,6 @@ img {
 	overflow: hidden;
 	width: 100%;
 	margin: 0 auto;
-	z-index: 5;
 }
 
 .row {
@@ -254,7 +253,7 @@ hr {
 .almost-black-bg { background-color: #222; }
 
 /* 3.2 - Image scroll*/
-[class^='img-'] { position: absolute; z-index: -1; height: 100% !important }
+[class^='img-'] { position: absolute; z-index: -1; }
 
 /* 3.3 - Filter */
 /* 3.3.1 - jQuery slider */
@@ -330,7 +329,6 @@ hr {
 .header {
 	height: 100%;
 	position: relative;
-	z-index: 100;
 	overflow: visible;
 
 	nav {
